# peginator

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.sh  build.rs  concept.ebnf  grammar.ebnf
cli/: Cargo.toml  README.md
cli/src/: main.rs  peg_railroad.rs
codegen/: Cargo.toml  README.md  build.rs
codegen/src/: buildscript.rs  char_rule.rs  choice.rs  common.rs  eoi.rs  extern_rule.rs  field.rs  header.rs  include_rule.rs  lib.rs  misc.rs  optional.rs  rule.rs  sequence.rs  string.rs
codegen/src/grammar/: generated.rs  mod.rs
doc/: syntax.md
macro/: Cargo.toml  README.md
macro/src/: lib.rs
macro/tests/: simple.rs
peginator/: Cargo.toml  grammar.ebnf
peginator/src/: buildscript.rs  codegen.rs  generator.rs  lib.rs  runtime.rs
peginator/src/codegen/: char_rule.rs  choice.rs  closure.rs  common.rs  eoi.rs  field.rs  grammar.rs  header.rs  lookahead.rs  misc.rs  mod.rs  optional.rs  parser.rs  rule.rs  sequence.rs  string.rs  types.rs
peginator/src/grammar/: generated.rs  mod.rs  test.rs
peginator/src/runtime/: builtin_parsers.rs  error.rs  mod.rs  peg_parser.rs  state.rs  trace.rs
peginator_macro/: Cargo.toml  README.md
peginator_macro/src/: lib.rs
peginator_macro/tests/: enum.rs  exponential.rs  palindrome.rs  simple.rs  typing.rs
peginator_test/: Cargo.toml  build.rs
peginator_test/src/: lib.rs  test_utils.rs
peginator_test/src/additional_traits/: grammar.ebnf  mod.rs
peginator_test/src/char_rule/: grammar.ebnf
peginator_test/src/check/: grammar.ebnf  mod.rs
peginator_test/src/choice/: grammar.ebnf
peginator_test/src/closure/: grammar.ebnf  mod.rs
peginator_test/src/custom_derives_empty/: mod.rs
peginator_test/src/enums/: grammar.ebnf
peginator_test/src/eoi/: grammar.ebnf
peginator_test/src/field/: grammar.ebnf  mod.rs
peginator_test/src/fndef_example/: grammar.ebnf
peginator_test/src/include_rule/: mod.rs
peginator_test/src/lookahead/: grammar.ebnf  mod.rs
peginator_test/src/memoization/: grammar.ebnf  mod.rs
peginator_test/src/operator_example/: grammar.ebnf  mod.rs
peginator_test/src/optional/: grammar.ebnf
peginator_test/src/palindrome/: grammar.ebnf
peginator_test/src/position/: grammar.ebnf  mod.rs
peginator_test/src/precedence/: grammar.ebnf
peginator_test/src/rust_keywords/: grammar.ebnf  mod.rs
peginator_test/src/sequence/: grammar.ebnf
peginator_test/src/simple/: grammar.ebnf  mod.rs
peginator_test/src/skip_ws/: grammar.ebnf  mod.rs
peginator_test/src/string/: grammar.ebnf
peginator_test/src/user_defined_state/: grammar.not_ebnf  mod.rs
runtime/: Cargo.toml  README.md  syntax.md
runtime/src/: builtin_parsers.rs  call_hook.rs  colored_shim.rs  error.rs  global.rs  lib.rs  peg_parser.rs  state.rs  trace.rs
src/: buildscript.rs  lib.rs  main.rs
src/codegen/: char_rule.rs  choice.rs  closure.rs  common.rs  eoi.rs  extern_rule.rs  field.rs  grammar.rs  header.rs  lookahead.rs  misc.rs  mod.rs  optional.rs  rule.rs  sequence.rs  string.rs  utils.rs
src/grammar/: generated.rs
src/runtime/: builtin_parsers.rs  choice_helper.rs  error.rs  global.rs  mod.rs  parse_result.rs  peg_parser.rs  state.rs  trace.rs
test/: Cargo.toml  build.rs
test/src/: lib.rs
test/src/additional_traits/: mod.rs
test/src/boxing/: grammar.ebnf  mod.rs
test/src/calculator_example/: grammar.ebnf  mod.rs
test/src/char_rule/: mod.rs
test/src/check/: mod.rs
test/src/choice/: mod.rs
test/src/closure/: grammar.ebnf  mod.rs
test/src/custom_derives_empty/: grammar.not_ebnf  mod.rs
test/src/custom_whitespace/: grammar.ebnf  mod.rs
test/src/enums/: mod.rs
test/src/eoi/: grammar.ebnf  mod.rs
test/src/extern_directive/: grammar.ebnf  mod.rs
test/src/field/: grammar.ebnf  mod.rs
test/src/fndef_example/: grammar.ebnf  mod.rs
test/src/include_rule/: grammar.ebnf  mod.rs
test/src/lookahead/: mod.rs
test/src/memoization/: mod.rs
test/src/operator_example/: grammar.ebnf  mod.rs
test/src/optional/: grammar.ebnf  mod.rs
test/src/palindrome/: mod.rs
test/src/position/: grammar.ebnf  mod.rs
test/src/precedence/: grammar.ebnf  mod.rs
test/src/rust_keywords/: mod.rs
test/src/sequence/: grammar.ebnf  mod.rs
test/src/simple/: mod.rs
test/src/skip_ws/: mod.rs
test/src/string/: mod.rs
test/src/string_insensitive/: grammar.ebnf  mod.rs
test/src/user_defined_state/: grammar.not_ebnf  mod.rs
