[workspace]
members = ["peginator_macro", "peginator_test"]

[package]
name = "peginator"
description = "PEG parser generator for creating ASTs in Rust"
version = "0.4.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
documentation = "https://docs.rs/peginator"
keywords = ["parsing", "parser", "grammar", "ast", "peg"]
categories = ["parsing"]
license = "MIT"

[[bin]]
name = "peginator-compile"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"]}
colored = "2.0"
nohash-hasher = "0.2.0"
sha2 = "0.10"
