[workspace]
members = ["macro", "test", "runtime"]

[package]
name = "peginator"
description = "PEG parser generator for creating ASTs in Rust"
version = "0.4.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
documentation = "https://docs.rs/peginator"
keywords = ["parsing", "parser", "grammar", "ast", "peg"]
categories = ["parsing"]
license = "MIT"

[dependencies]
peginator_codegen = { version="=0.4.0", path = "codegen" }
clap = { version = "4.0", features = ["derive"]}
colored = "2.0"
anyhow = "1.0"
