[package]
name = "peginator-cli"
description = "Command line interface for peginator (a PEG parser generator)"
version = "0.6.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
documentation = "https://docs.rs/peginator"
keywords = ["parsing", "parser", "grammar", "ast", "peg"]
categories = ["parsing"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"]}
colored = "2.0"
peginator = { version="=0.6.0", path = "../runtime" }
peginator_codegen = { version="=0.6.0", path = "../codegen" }
railroad = "0.1.1"
