[package]
name = "peginator_macro"
description = "Convenience macros for using peginator (a PEG parser generator)"
version = "0.5.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
documentation = "https://docs.rs/peginator_macro"
keywords = ["parsing", "parser", "grammar", "ast", "peg"]
categories = ["parsing"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
peginator_codegen = { version="=0.5.0", path = "../codegen" }
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro"] }

[dev-dependencies]
peginator_runtime = { version="=0.5.0", path = "../runtime" }
