[package]
name = "peginator"
version = "0.1.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
license = "MIT"

[[bin]]
name = "peginator-compile"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"]}
colored = "2.0"
nohash-hasher = "0.2.0"
build-time = "0.1"
sha2 = "0.10"
