[package]
name = "peginator_macro"
version = "0.1.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
peginator = { path = "../peginator" }
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro"] }
[dev-dependencies]
ntest = "0.7.5"
