[package]
name = "peginator_runtime"
description = "Runtime support for peginator (a PEG parser generator)"
version = "0.5.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
documentation = "https://docs.rs/peginator_runtime"
keywords = ["parsing", "parser", "grammar", "ast", "peg"]
categories = ["parsing"]
license = "MIT"

# All dependencies of this crate will appear in every dependency tree of every
# crate which uses `peginator` to generate code. Therefore, dependencies should
# be strenuously avoided in this crate.
[dependencies]
nohash-hasher = "0.2.0"
colored = { version = "2.0", optional = true }

[features]
default = ["colored"]
