[package]
name = "peginator_test"
description = "Test package for peginator"
version = "0.4.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peginator_runtime = { version="=0.4.0", path = "../runtime" }
peginator = { path = "../" }

[build-dependencies]
peginator = { path = "../" }

[dev-dependencies]
ntest = "0.9"
