[package]
name = "peginator_test"
description = "Test package for peginator"
version = "0.5.1"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
repository = "https://github.com/badicsalex/peginator"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peginator_runtime = { version="=0.5.1", path = "../runtime" }

[build-dependencies]
peginator_codegen = { version="=0.5.1", path = "../codegen" }

[dev-dependencies]
ntest = "0.9"
